# hs-dummy-examples

./: .gitignore  README.md
CommandLineArgs/: CommandLine.hs
Interact/: Interact.hs  go.sh
MonadTransformers/: MyState.hs  MyStateT.hs  build.sh
MonadTransformersMultiple/MonadTransformersMultiple/: MonadTransformersMultiple.cabal  README.md  build.sh
MonadTransformersMultiple/MonadTransformersMultiple/app/: Main.hs
MonadTransformersMultiple/MonadTransformersMultiple/src/: Lib.hs  MaybeTIO.hs
SimpleNetworkPipes/: stack.yaml
SimpleNetworkPipes/simple-network-pipes/: README.md  simple-network-pipes.cabal  stack.yaml
SimpleNetworkPipes/simple-network-pipes/app/: Main.hs
SimpleNetworkPipes/simple-network-pipes/src/: Client.hs  Command.hs  Server.hs  Server.hs.old
SimplePostgresql/: stack.yaml
SimplePostgresql/SimplePostgresql/: README.md  SimplePostgresql.cabal  run.sh
SimplePostgresql/SimplePostgresql/app/: Main.hs
SimplePostgresql/SimplePostgresql/src/: Lib.hs
SimpleSqlite/: notes
SimpleState/: SimpleState.hs
SimpleTCPServer/: BasicConcurrentServer.hs  ServerOtherVersion.hs  SimpleTCPServer.hs
